Gtk-3.20: [GtkWindow] Switch from scalable spacing to fixed
I can't reproduce but it may fix this issue: #38.

--- a/gtk-3.20/_common.scss
+++ b/gtk-3.20/_common.scss
@@ -1713,8 +1713,8 @@ headerbar {
   }
 
   &.default-decoration {
-    min-height: 2em;
-    padding: 0.4em;
+    min-height: 26.6px;
+    padding: 5.3px;
     border-width: 0;
 
     .title { // fade_effect doesn't work
@@ -1723,8 +1723,8 @@ headerbar {
     }
 
     button.titlebutton {
-      min-width: 2em;
-      min-height: 2em;
+      min-width: 26.6px;
+      min-height: 26.6px;
       margin: 0;
       padding: 0;
       color: $inverted_secondary_fg_color;
@@ -4487,8 +4487,8 @@ headerbar,
 .ssd decoration .titlebar {
   // shrink titlebar height for SSD
   button.titlebutton {
-    min-width: 2em;
-    min-height: 2em;
+    min-width: 26.6px;
+    min-height: 26.6px;
     padding: 0;
   }
 }
