--- a/gtk-3.20/gtk-dark.css
+++ b/gtk-3.20/gtk-dark.css
@@ -2682,8 +2682,8 @@ headerbar {
     transition: none; }
   .titlebar.default-decoration,
   headerbar.default-decoration {
-    min-height: 2em;
-    padding: 0.4em;
+    min-height: 26.6px;
+    padding: 5.3px;
     border-width: 0; }
     .titlebar.default-decoration .title,
     headerbar.default-decoration .title {
@@ -2693,8 +2693,8 @@ headerbar {
         color: rgba(236, 239, 241, 0.55); }
     .titlebar.default-decoration button.titlebutton,
     headerbar.default-decoration button.titlebutton {
-      min-width: 2em;
-      min-height: 2em;
+      min-width: 26.6px;
+      min-height: 26.6px;
       margin: 0;
       padding: 0;
       color: rgba(236, 239, 241, 0.75);
@@ -7898,8 +7898,8 @@ headerbar button.titlebutton, headerbar.selection-mode button.titlebutton,
     background-color: #00BCD4; }
 
 .ssd decoration .titlebar button.titlebutton {
-  min-width: 2em;
-  min-height: 2em;
+  min-width: 26.6px;
+  min-height: 26.6px;
   padding: 0; }
 
 .view:selected, iconview:selected, .view:selected:focus, iconview:selected:focus,
